feature: stub third service, implement client

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -9,3 +9,7 @@ spring:
   sql:
     init:
       schema-locations: classpath:db/schema.sql
+
+services:
+  commodity-service:
+    url: http://127.0.0.1:8001
